--- a/demo.ipynb
+++ b/demo.ipynb
@@ -33,6 +33,7 @@
    "outputs": [],
    "source": [
     "user_email = \"examplel@example.com\"  # Replace with your email\n",
+    "user_name = \"Your Name\" # Replace with your name\n",
     "\n",
     "print(\"=== piboufilings Demo ===\")\n",
     "print(\"This demo shows how to download and parse SEC filings.\")\n",
@@ -48,7 +49,8 @@
     "    form_type=[\"13F-HR\", \"NPORT\"],\n",
     "    start_year=2024, \n",
     "    end_year = 2025,\n",
-    "    user_agent=user_email\n",
+    "    user_name = user_name,\n",
+    "    user_agent_email=user_email,\n",
     ")"
    ]
   }
